// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Clear button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ gWCsfC"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="firstName-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r1v:"
              id=":r1v:-label"
            >
              First name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r1v:"
                name="firstName"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    First name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="middleName-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r20:"
              id=":r20:-label"
            >
              Middle name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r20:"
                name="middleName"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Middle name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="lastName-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r21:"
              id=":r21:-label"
            >
              Last name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r21:"
                name="lastName"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Last name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="customerId-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r22:"
              id=":r22:-label"
            >
              Customer id
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r22:"
                name="customerId"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Customer id
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="mobilenumber-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r23:"
              id=":r23:-label"
            >
              Mobile number
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r23:"
                name="mobileNumber"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Mobile number
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="emailaddress-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r24:"
              id=":r24:-label"
            >
              Email address
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r24:"
                name="emailAddress"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Email address
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="idmArnNo-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r25:"
              id=":r25:-label"
            >
              eKYC ARN number
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r25:"
                name="idmArnNo"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    eKYC ARN number
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1el3gw5-MuiButtonBase-root-MuiIconButton-root"
            data-testid="search-button"
            tabindex="0"
            title="Search"
            type="button"
          >
            <img
              alt="Search"
              height="30"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAAjCAYAAADxG9hnAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAWJQAAFiUBSVIk8AAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIBSURBVFhH7ZahksIwEEArkUgkEolEIpFIJBKJxCErkUgkEonkE5BIJBKJDPMy2Q4Joc22V+YEb4aZuxzdvG52N5eZf8JPJCRZ5HA4mPV6bcbjsf1Mp1P7+/l8dt9oRqUIAt1u12RZ9vEzGAzM5XJxT9Tjo8j9fjfz+bzYDJnJZGKzsNvtzGq1spmRv3c6HZPnuXtaT1TkdruZXq+XtEEojGwdoiKz2cwGJeWpNbDf74sj3G63bjWdNxECSiau16tbTaPJs54IaZYjqfNWINnUHpEnQhESZDgcuhU91BcZIY4mK54Is4EAy+XSrdSDFyHOZrNxK9V4IhKAzDRBukjzQp5Iv9+3AZpOSzJBHIRSiYqcTie3Ug+GXqOMjEYjG0BztjGk1jSd54ksFgt1SmNIZo/Ho1upxhPhSAjALKEN6yAxaGHmUiqeCMhFxmDS8ng8imxwKWp4E+E6l4HEyNYgR0tGkdLwJgLctgSUN6sKyjEy0uUZiv5PROD1aucWpvDCuiF7dEbsH6dGd00Im4ebUAPUUWw9JsV6yoAsFQGyQOFK3YQf6uF17rBp+F3kqmQqRQTOnNakgNmYnz+1p3SORiZZRIOMeI1MKyJk77WLUmRaEYEymVhHtSYCZTLhKGhVBGIydFpI6yKADOOftqajYlfHV0SEshv9qyJl/ER8jHkCdYd3vlPdS/oAAAAASUVORK5CYII="
              width="30"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-u9fpxq-MuiButtonBase-root-MuiIconButton-root"
            data-testid="clear-button"
            tabindex="0"
            title="Clear"
            type="button"
          >
            <img
              alt="Clear"
              height="30"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADsAAAA2CAYAAAB5u+FtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAADKGlUWHRYTUw6Y29tLmFkb2JlLnhtcAAAAAAAPD94cGFja2V0IGJlZ2luPSLvu78iIGlkPSJXNU0wTXBDZWhpSHpyZVN6TlRjemtjOWQiPz4gPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iQWRvYmUgWE1QIENvcmUgNy4xLWMwMDAgNzkuZWRhMmIzZmFjLCAyMDIxLzExLzE3LTE3OjIzOjE5ICAgICAgICAiPiA8cmRmOlJERiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPiA8cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIiB4bWxuczp4bXA9Imh0dHA6Ly9ucy5hZG9iZS5jb20veGFwLzEuMC8iIHhtbG5zOnhtcE1NPSJodHRwOi8vbnMuYWRvYmUuY29tL3hhcC8xLjAvbW0vIiB4bWxuczpzdFJlZj0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL3NUeXBlL1Jlc291cmNlUmVmIyIgeG1wOkNyZWF0b3JUb29sPSJBZG9iZSBQaG90b3Nob3AgMjMuMSAoTWFjaW50b3NoKSIgeG1wTU06SW5zdGFuY2VJRD0ieG1wLmlpZDpFOTY3NTdGRDg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiIgeG1wTU06RG9jdW1lbnRJRD0ieG1wLmRpZDpFOTY3NTdGRTg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiI+IDx4bXBNTTpEZXJpdmVkRnJvbSBzdFJlZjppbnN0YW5jZUlEPSJ4bXAuaWlkOkU5Njc1N0ZCODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2IiBzdFJlZjpkb2N1bWVudElEPSJ4bXAuZGlkOkU5Njc1N0ZDODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2Ii8+IDwvcmRmOkRlc2NyaXB0aW9uPiA8L3JkZjpSREY+IDwveDp4bXBtZXRhPiA8P3hwYWNrZXQgZW5kPSJyIj8+95Aj+QAAAplJREFUaEPt2o+RwUAUBvDcNUAHdEAH0gEdUIIO6EA6UIISUAEd0AEduHxm90aSfcn+eS9ryDfz5kbIZn8uye6a/DzyJF+SX/X3KxIVe71ek+PxmNzvd7VFODiNY2S5XOLyeVa/33+cTif1jlyiYBeLxT/0tbbbrfqETFrHUlBdkuDWsLfb7TGbzYzAckmBW8ECOh6PjTCqsixTe/NFHOsD1YVTnjOi2BCoLk6wGBZDCYYUE8C1uMAiWE6orjRNn2dKSNixElBduCRCwKzY3W4nBtUVAmbDYmw0dU6ifMEs2Dahunzm08HYGFBdruAgbNM8t41yAXtjKehoNDJulyyA9/u96hkdLywF1RP4+XxufF+6mhYQTljcAamVS/lAscCXy0X1oBprLKDUPJf6RmOAV6uVOno1VlgK2uv1Gq+VzWZT2U+y6vrTiK2D2t4F2xqegq5Zap7rAtWRBjdBERJLQQeDgTNUBx3CF1VuM7RsoIgRS0ExhvrMSV+DtrnAaAeLD9tUsNTKhQOqwwH2uZQKWOxsapgTqhMC9oEiBaxpXJxOp+xQHUwAXKeXvlCkgDWNiTilfRu3Cb5IW3DoGVbA1h3Y9o7nExtwKBSp3KBigk03RhQHFKlgETQ8mUyMB5YCUyspznuGEatDTeTX67X6BE8oKI7PmVosQoHRQY60BUUasYgUuE0oYoVFqKWaDxjXoOvamCPWWAQdMXXQ5XfcWFDECYuEgGNCEWcsgo6Z5rV1YAqKdlxWLiHxwiLURB6g8vQSr4fDYeWzIfNcn3hjEQosXXU/qtUl6KGv/L+YHA6HJAerLe+d4CfcAD6fz0k+f1Vb3jdsD2rikbwsy9Qr2aRp+izXdE+lfmo67Kemw35qOuxnJkn+APMORUH01o2UAAAAAElFTkSuQmCC"
              width="30"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ gWCsfC"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="firstName-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r1v:"
            id=":r1v:-label"
          >
            First name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r1v:"
              name="firstName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  First name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="middleName-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r20:"
            id=":r20:-label"
          >
            Middle name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r20:"
              name="middleName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Middle name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="lastName-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r21:"
            id=":r21:-label"
          >
            Last name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r21:"
              name="lastName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Last name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="customerId-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r22:"
            id=":r22:-label"
          >
            Customer id
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r22:"
              name="customerId"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Customer id
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="mobilenumber-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r23:"
            id=":r23:-label"
          >
            Mobile number
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r23:"
              name="mobileNumber"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Mobile number
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="emailaddress-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r24:"
            id=":r24:-label"
          >
            Email address
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r24:"
              name="emailAddress"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Email address
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="idmArnNo-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r25:"
            id=":r25:-label"
          >
            eKYC ARN number
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r25:"
              name="idmArnNo"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  eKYC ARN number
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root css-vj1n65-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1el3gw5-MuiButtonBase-root-MuiIconButton-root"
          data-testid="search-button"
          tabindex="0"
          title="Search"
          type="button"
        >
          <img
            alt="Search"
            height="30"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAAjCAYAAADxG9hnAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAWJQAAFiUBSVIk8AAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIBSURBVFhH7ZahksIwEEArkUgkEolEIpFIJBKJxCErkUgkEonkE5BIJBKJDPMy2Q4Joc22V+YEb4aZuxzdvG52N5eZf8JPJCRZ5HA4mPV6bcbjsf1Mp1P7+/l8dt9oRqUIAt1u12RZ9vEzGAzM5XJxT9Tjo8j9fjfz+bzYDJnJZGKzsNvtzGq1spmRv3c6HZPnuXtaT1TkdruZXq+XtEEojGwdoiKz2cwGJeWpNbDf74sj3G63bjWdNxECSiau16tbTaPJs54IaZYjqfNWINnUHpEnQhESZDgcuhU91BcZIY4mK54Is4EAy+XSrdSDFyHOZrNxK9V4IhKAzDRBukjzQp5Iv9+3AZpOSzJBHIRSiYqcTie3Ug+GXqOMjEYjG0BztjGk1jSd54ksFgt1SmNIZo/Ho1upxhPhSAjALKEN6yAxaGHmUiqeCMhFxmDS8ng8imxwKWp4E+E6l4HEyNYgR0tGkdLwJgLctgSUN6sKyjEy0uUZiv5PROD1aucWpvDCuiF7dEbsH6dGd00Im4ebUAPUUWw9JsV6yoAsFQGyQOFK3YQf6uF17rBp+F3kqmQqRQTOnNakgNmYnz+1p3SORiZZRIOMeI1MKyJk77WLUmRaEYEymVhHtSYCZTLhKGhVBGIydFpI6yKADOOftqajYlfHV0SEshv9qyJl/ER8jHkCdYd3vlPdS/oAAAAASUVORK5CYII="
            width="30"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-u9fpxq-MuiButtonBase-root-MuiIconButton-root"
          data-testid="clear-button"
          tabindex="0"
          title="Clear"
          type="button"
        >
          <img
            alt="Clear"
            height="30"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADsAAAA2CAYAAAB5u+FtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAADKGlUWHRYTUw6Y29tLmFkb2JlLnhtcAAAAAAAPD94cGFja2V0IGJlZ2luPSLvu78iIGlkPSJXNU0wTXBDZWhpSHpyZVN6TlRjemtjOWQiPz4gPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iQWRvYmUgWE1QIENvcmUgNy4xLWMwMDAgNzkuZWRhMmIzZmFjLCAyMDIxLzExLzE3LTE3OjIzOjE5ICAgICAgICAiPiA8cmRmOlJERiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPiA8cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIiB4bWxuczp4bXA9Imh0dHA6Ly9ucy5hZG9iZS5jb20veGFwLzEuMC8iIHhtbG5zOnhtcE1NPSJodHRwOi8vbnMuYWRvYmUuY29tL3hhcC8xLjAvbW0vIiB4bWxuczpzdFJlZj0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL3NUeXBlL1Jlc291cmNlUmVmIyIgeG1wOkNyZWF0b3JUb29sPSJBZG9iZSBQaG90b3Nob3AgMjMuMSAoTWFjaW50b3NoKSIgeG1wTU06SW5zdGFuY2VJRD0ieG1wLmlpZDpFOTY3NTdGRDg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiIgeG1wTU06RG9jdW1lbnRJRD0ieG1wLmRpZDpFOTY3NTdGRTg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiI+IDx4bXBNTTpEZXJpdmVkRnJvbSBzdFJlZjppbnN0YW5jZUlEPSJ4bXAuaWlkOkU5Njc1N0ZCODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2IiBzdFJlZjpkb2N1bWVudElEPSJ4bXAuZGlkOkU5Njc1N0ZDODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2Ii8+IDwvcmRmOkRlc2NyaXB0aW9uPiA8L3JkZjpSREY+IDwveDp4bXBtZXRhPiA8P3hwYWNrZXQgZW5kPSJyIj8+95Aj+QAAAplJREFUaEPt2o+RwUAUBvDcNUAHdEAH0gEdUIIO6EA6UIISUAEd0AEduHxm90aSfcn+eS9ryDfz5kbIZn8uye6a/DzyJF+SX/X3KxIVe71ek+PxmNzvd7VFODiNY2S5XOLyeVa/33+cTif1jlyiYBeLxT/0tbbbrfqETFrHUlBdkuDWsLfb7TGbzYzAckmBW8ECOh6PjTCqsixTe/NFHOsD1YVTnjOi2BCoLk6wGBZDCYYUE8C1uMAiWE6orjRNn2dKSNixElBduCRCwKzY3W4nBtUVAmbDYmw0dU6ifMEs2Dahunzm08HYGFBdruAgbNM8t41yAXtjKehoNDJulyyA9/u96hkdLywF1RP4+XxufF+6mhYQTljcAamVS/lAscCXy0X1oBprLKDUPJf6RmOAV6uVOno1VlgK2uv1Gq+VzWZT2U+y6vrTiK2D2t4F2xqegq5Zap7rAtWRBjdBERJLQQeDgTNUBx3CF1VuM7RsoIgRS0ExhvrMSV+DtrnAaAeLD9tUsNTKhQOqwwH2uZQKWOxsapgTqhMC9oEiBaxpXJxOp+xQHUwAXKeXvlCkgDWNiTilfRu3Cb5IW3DoGVbA1h3Y9o7nExtwKBSp3KBigk03RhQHFKlgETQ8mUyMB5YCUyspznuGEatDTeTX67X6BE8oKI7PmVosQoHRQY60BUUasYgUuE0oYoVFqKWaDxjXoOvamCPWWAQdMXXQ5XfcWFDECYuEgGNCEWcsgo6Z5rV1YAqKdlxWLiHxwiLURB6g8vQSr4fDYeWzIfNcn3hjEQosXXU/qtUl6KGv/L+YHA6HJAerLe+d4CfcAD6fz0k+f1Vb3jdsD2rikbwsy9Qr2aRp+izXdE+lfmo67Kemw35qOuxnJkn+APMORUH01o2UAAAAAElFTkSuQmCC"
            width="30"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Render Search component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ gWCsfC"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="firstName-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r0:"
              id=":r0:-label"
            >
              First name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r0:"
                name="firstName"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    First name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="middleName-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r1:"
              id=":r1:-label"
            >
              Middle name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r1:"
                name="middleName"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Middle name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="lastName-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r2:"
              id=":r2:-label"
            >
              Last name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r2:"
                name="lastName"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Last name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="customerId-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r3:"
              id=":r3:-label"
            >
              Customer id
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r3:"
                name="customerId"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Customer id
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="mobilenumber-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r4:"
              id=":r4:-label"
            >
              Mobile number
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r4:"
                name="mobileNumber"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Mobile number
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="emailaddress-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r5:"
              id=":r5:-label"
            >
              Email address
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r5:"
                name="emailAddress"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Email address
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="idmArnNo-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r6:"
              id=":r6:-label"
            >
              eKYC ARN number
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r6:"
                name="idmArnNo"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    eKYC ARN number
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1el3gw5-MuiButtonBase-root-MuiIconButton-root"
            data-testid="search-button"
            tabindex="0"
            title="Search"
            type="button"
          >
            <img
              alt="Search"
              height="30"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAAjCAYAAADxG9hnAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAWJQAAFiUBSVIk8AAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIBSURBVFhH7ZahksIwEEArkUgkEolEIpFIJBKJxCErkUgkEonkE5BIJBKJDPMy2Q4Joc22V+YEb4aZuxzdvG52N5eZf8JPJCRZ5HA4mPV6bcbjsf1Mp1P7+/l8dt9oRqUIAt1u12RZ9vEzGAzM5XJxT9Tjo8j9fjfz+bzYDJnJZGKzsNvtzGq1spmRv3c6HZPnuXtaT1TkdruZXq+XtEEojGwdoiKz2cwGJeWpNbDf74sj3G63bjWdNxECSiau16tbTaPJs54IaZYjqfNWINnUHpEnQhESZDgcuhU91BcZIY4mK54Is4EAy+XSrdSDFyHOZrNxK9V4IhKAzDRBukjzQp5Iv9+3AZpOSzJBHIRSiYqcTie3Ug+GXqOMjEYjG0BztjGk1jSd54ksFgt1SmNIZo/Ho1upxhPhSAjALKEN6yAxaGHmUiqeCMhFxmDS8ng8imxwKWp4E+E6l4HEyNYgR0tGkdLwJgLctgSUN6sKyjEy0uUZiv5PROD1aucWpvDCuiF7dEbsH6dGd00Im4ebUAPUUWw9JsV6yoAsFQGyQOFK3YQf6uF17rBp+F3kqmQqRQTOnNakgNmYnz+1p3SORiZZRIOMeI1MKyJk77WLUmRaEYEymVhHtSYCZTLhKGhVBGIydFpI6yKADOOftqajYlfHV0SEshv9qyJl/ER8jHkCdYd3vlPdS/oAAAAASUVORK5CYII="
              width="30"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-u9fpxq-MuiButtonBase-root-MuiIconButton-root"
            data-testid="clear-button"
            tabindex="0"
            title="Clear"
            type="button"
          >
            <img
              alt="Clear"
              height="30"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADsAAAA2CAYAAAB5u+FtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAADKGlUWHRYTUw6Y29tLmFkb2JlLnhtcAAAAAAAPD94cGFja2V0IGJlZ2luPSLvu78iIGlkPSJXNU0wTXBDZWhpSHpyZVN6TlRjemtjOWQiPz4gPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iQWRvYmUgWE1QIENvcmUgNy4xLWMwMDAgNzkuZWRhMmIzZmFjLCAyMDIxLzExLzE3LTE3OjIzOjE5ICAgICAgICAiPiA8cmRmOlJERiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPiA8cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIiB4bWxuczp4bXA9Imh0dHA6Ly9ucy5hZG9iZS5jb20veGFwLzEuMC8iIHhtbG5zOnhtcE1NPSJodHRwOi8vbnMuYWRvYmUuY29tL3hhcC8xLjAvbW0vIiB4bWxuczpzdFJlZj0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL3NUeXBlL1Jlc291cmNlUmVmIyIgeG1wOkNyZWF0b3JUb29sPSJBZG9iZSBQaG90b3Nob3AgMjMuMSAoTWFjaW50b3NoKSIgeG1wTU06SW5zdGFuY2VJRD0ieG1wLmlpZDpFOTY3NTdGRDg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiIgeG1wTU06RG9jdW1lbnRJRD0ieG1wLmRpZDpFOTY3NTdGRTg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiI+IDx4bXBNTTpEZXJpdmVkRnJvbSBzdFJlZjppbnN0YW5jZUlEPSJ4bXAuaWlkOkU5Njc1N0ZCODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2IiBzdFJlZjpkb2N1bWVudElEPSJ4bXAuZGlkOkU5Njc1N0ZDODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2Ii8+IDwvcmRmOkRlc2NyaXB0aW9uPiA8L3JkZjpSREY+IDwveDp4bXBtZXRhPiA8P3hwYWNrZXQgZW5kPSJyIj8+95Aj+QAAAplJREFUaEPt2o+RwUAUBvDcNUAHdEAH0gEdUIIO6EA6UIISUAEd0AEduHxm90aSfcn+eS9ryDfz5kbIZn8uye6a/DzyJF+SX/X3KxIVe71ek+PxmNzvd7VFODiNY2S5XOLyeVa/33+cTif1jlyiYBeLxT/0tbbbrfqETFrHUlBdkuDWsLfb7TGbzYzAckmBW8ECOh6PjTCqsixTe/NFHOsD1YVTnjOi2BCoLk6wGBZDCYYUE8C1uMAiWE6orjRNn2dKSNixElBduCRCwKzY3W4nBtUVAmbDYmw0dU6ifMEs2Dahunzm08HYGFBdruAgbNM8t41yAXtjKehoNDJulyyA9/u96hkdLywF1RP4+XxufF+6mhYQTljcAamVS/lAscCXy0X1oBprLKDUPJf6RmOAV6uVOno1VlgK2uv1Gq+VzWZT2U+y6vrTiK2D2t4F2xqegq5Zap7rAtWRBjdBERJLQQeDgTNUBx3CF1VuM7RsoIgRS0ExhvrMSV+DtrnAaAeLD9tUsNTKhQOqwwH2uZQKWOxsapgTqhMC9oEiBaxpXJxOp+xQHUwAXKeXvlCkgDWNiTilfRu3Cb5IW3DoGVbA1h3Y9o7nExtwKBSp3KBigk03RhQHFKlgETQ8mUyMB5YCUyspznuGEatDTeTX67X6BE8oKI7PmVosQoHRQY60BUUasYgUuE0oYoVFqKWaDxjXoOvamCPWWAQdMXXQ5XfcWFDECYuEgGNCEWcsgo6Z5rV1YAqKdlxWLiHxwiLURB6g8vQSr4fDYeWzIfNcn3hjEQosXXU/qtUl6KGv/L+YHA6HJAerLe+d4CfcAD6fz0k+f1Vb3jdsD2rikbwsy9Qr2aRp+izXdE+lfmo67Kemw35qOuxnJkn+APMORUH01o2UAAAAAElFTkSuQmCC"
              width="30"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ gWCsfC"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="firstName-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r0:"
            id=":r0:-label"
          >
            First name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r0:"
              name="firstName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  First name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="middleName-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r1:"
            id=":r1:-label"
          >
            Middle name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r1:"
              name="middleName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Middle name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="lastName-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r2:"
            id=":r2:-label"
          >
            Last name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r2:"
              name="lastName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Last name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="customerId-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r3:"
            id=":r3:-label"
          >
            Customer id
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r3:"
              name="customerId"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Customer id
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="mobilenumber-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r4:"
            id=":r4:-label"
          >
            Mobile number
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r4:"
              name="mobileNumber"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Mobile number
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="emailaddress-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r5:"
            id=":r5:-label"
          >
            Email address
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r5:"
              name="emailAddress"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Email address
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="idmArnNo-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r6:"
            id=":r6:-label"
          >
            eKYC ARN number
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r6:"
              name="idmArnNo"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  eKYC ARN number
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root css-vj1n65-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1el3gw5-MuiButtonBase-root-MuiIconButton-root"
          data-testid="search-button"
          tabindex="0"
          title="Search"
          type="button"
        >
          <img
            alt="Search"
            height="30"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAAjCAYAAADxG9hnAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAWJQAAFiUBSVIk8AAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIBSURBVFhH7ZahksIwEEArkUgkEolEIpFIJBKJxCErkUgkEonkE5BIJBKJDPMy2Q4Joc22V+YEb4aZuxzdvG52N5eZf8JPJCRZ5HA4mPV6bcbjsf1Mp1P7+/l8dt9oRqUIAt1u12RZ9vEzGAzM5XJxT9Tjo8j9fjfz+bzYDJnJZGKzsNvtzGq1spmRv3c6HZPnuXtaT1TkdruZXq+XtEEojGwdoiKz2cwGJeWpNbDf74sj3G63bjWdNxECSiau16tbTaPJs54IaZYjqfNWINnUHpEnQhESZDgcuhU91BcZIY4mK54Is4EAy+XSrdSDFyHOZrNxK9V4IhKAzDRBukjzQp5Iv9+3AZpOSzJBHIRSiYqcTie3Ug+GXqOMjEYjG0BztjGk1jSd54ksFgt1SmNIZo/Ho1upxhPhSAjALKEN6yAxaGHmUiqeCMhFxmDS8ng8imxwKWp4E+E6l4HEyNYgR0tGkdLwJgLctgSUN6sKyjEy0uUZiv5PROD1aucWpvDCuiF7dEbsH6dGd00Im4ebUAPUUWw9JsV6yoAsFQGyQOFK3YQf6uF17rBp+F3kqmQqRQTOnNakgNmYnz+1p3SORiZZRIOMeI1MKyJk77WLUmRaEYEymVhHtSYCZTLhKGhVBGIydFpI6yKADOOftqajYlfHV0SEshv9qyJl/ER8jHkCdYd3vlPdS/oAAAAASUVORK5CYII="
            width="30"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-u9fpxq-MuiButtonBase-root-MuiIconButton-root"
          data-testid="clear-button"
          tabindex="0"
          title="Clear"
          type="button"
        >
          <img
            alt="Clear"
            height="30"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADsAAAA2CAYAAAB5u+FtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAADKGlUWHRYTUw6Y29tLmFkb2JlLnhtcAAAAAAAPD94cGFja2V0IGJlZ2luPSLvu78iIGlkPSJXNU0wTXBDZWhpSHpyZVN6TlRjemtjOWQiPz4gPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iQWRvYmUgWE1QIENvcmUgNy4xLWMwMDAgNzkuZWRhMmIzZmFjLCAyMDIxLzExLzE3LTE3OjIzOjE5ICAgICAgICAiPiA8cmRmOlJERiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPiA8cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIiB4bWxuczp4bXA9Imh0dHA6Ly9ucy5hZG9iZS5jb20veGFwLzEuMC8iIHhtbG5zOnhtcE1NPSJodHRwOi8vbnMuYWRvYmUuY29tL3hhcC8xLjAvbW0vIiB4bWxuczpzdFJlZj0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL3NUeXBlL1Jlc291cmNlUmVmIyIgeG1wOkNyZWF0b3JUb29sPSJBZG9iZSBQaG90b3Nob3AgMjMuMSAoTWFjaW50b3NoKSIgeG1wTU06SW5zdGFuY2VJRD0ieG1wLmlpZDpFOTY3NTdGRDg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiIgeG1wTU06RG9jdW1lbnRJRD0ieG1wLmRpZDpFOTY3NTdGRTg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiI+IDx4bXBNTTpEZXJpdmVkRnJvbSBzdFJlZjppbnN0YW5jZUlEPSJ4bXAuaWlkOkU5Njc1N0ZCODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2IiBzdFJlZjpkb2N1bWVudElEPSJ4bXAuZGlkOkU5Njc1N0ZDODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2Ii8+IDwvcmRmOkRlc2NyaXB0aW9uPiA8L3JkZjpSREY+IDwveDp4bXBtZXRhPiA8P3hwYWNrZXQgZW5kPSJyIj8+95Aj+QAAAplJREFUaEPt2o+RwUAUBvDcNUAHdEAH0gEdUIIO6EA6UIISUAEd0AEduHxm90aSfcn+eS9ryDfz5kbIZn8uye6a/DzyJF+SX/X3KxIVe71ek+PxmNzvd7VFODiNY2S5XOLyeVa/33+cTif1jlyiYBeLxT/0tbbbrfqETFrHUlBdkuDWsLfb7TGbzYzAckmBW8ECOh6PjTCqsixTe/NFHOsD1YVTnjOi2BCoLk6wGBZDCYYUE8C1uMAiWE6orjRNn2dKSNixElBduCRCwKzY3W4nBtUVAmbDYmw0dU6ifMEs2Dahunzm08HYGFBdruAgbNM8t41yAXtjKehoNDJulyyA9/u96hkdLywF1RP4+XxufF+6mhYQTljcAamVS/lAscCXy0X1oBprLKDUPJf6RmOAV6uVOno1VlgK2uv1Gq+VzWZT2U+y6vrTiK2D2t4F2xqegq5Zap7rAtWRBjdBERJLQQeDgTNUBx3CF1VuM7RsoIgRS0ExhvrMSV+DtrnAaAeLD9tUsNTKhQOqwwH2uZQKWOxsapgTqhMC9oEiBaxpXJxOp+xQHUwAXKeXvlCkgDWNiTilfRu3Cb5IW3DoGVbA1h3Y9o7nExtwKBSp3KBigk03RhQHFKlgETQ8mUyMB5YCUyspznuGEatDTeTX67X6BE8oKI7PmVosQoHRQY60BUUasYgUuE0oYoVFqKWaDxjXoOvamCPWWAQdMXXQ5XfcWFDECYuEgGNCEWcsgo6Z5rV1YAqKdlxWLiHxwiLURB6g8vQSr4fDYeWzIfNcn3hjEQosXXU/qtUl6KGv/L+YHA6HJAerLe+d4CfcAD6fz0k+f1Vb3jdsD2rikbwsy9Qr2aRp+izXdE+lfmo67Kemw35qOuxnJkn+APMORUH01o2UAAAAAElFTkSuQmCC"
            width="30"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Render SearchButton component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ gWCsfC"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="firstName-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r1o:"
              id=":r1o:-label"
            >
              First name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r1o:"
                name="firstName"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    First name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="middleName-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r1p:"
              id=":r1p:-label"
            >
              Middle name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r1p:"
                name="middleName"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Middle name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="lastName-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r1q:"
              id=":r1q:-label"
            >
              Last name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r1q:"
                name="lastName"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Last name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="customerId-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r1r:"
              id=":r1r:-label"
            >
              Customer id
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r1r:"
                name="customerId"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Customer id
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="mobilenumber-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r1s:"
              id=":r1s:-label"
            >
              Mobile number
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r1s:"
                name="mobileNumber"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Mobile number
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="emailaddress-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r1t:"
              id=":r1t:-label"
            >
              Email address
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r1t:"
                name="emailAddress"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    Email address
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
            data-test-id="idmArnNo-input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for=":r1u:"
              id=":r1u:-label"
            >
              eKYC ARN number
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r1u:"
                name="idmArnNo"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1ftyaf0"
                >
                  <span>
                    eKYC ARN number
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1el3gw5-MuiButtonBase-root-MuiIconButton-root"
            data-testid="search-button"
            tabindex="0"
            title="Search"
            type="button"
          >
            <img
              alt="Search"
              height="30"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAAjCAYAAADxG9hnAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAWJQAAFiUBSVIk8AAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIBSURBVFhH7ZahksIwEEArkUgkEolEIpFIJBKJxCErkUgkEonkE5BIJBKJDPMy2Q4Joc22V+YEb4aZuxzdvG52N5eZf8JPJCRZ5HA4mPV6bcbjsf1Mp1P7+/l8dt9oRqUIAt1u12RZ9vEzGAzM5XJxT9Tjo8j9fjfz+bzYDJnJZGKzsNvtzGq1spmRv3c6HZPnuXtaT1TkdruZXq+XtEEojGwdoiKz2cwGJeWpNbDf74sj3G63bjWdNxECSiau16tbTaPJs54IaZYjqfNWINnUHpEnQhESZDgcuhU91BcZIY4mK54Is4EAy+XSrdSDFyHOZrNxK9V4IhKAzDRBukjzQp5Iv9+3AZpOSzJBHIRSiYqcTie3Ug+GXqOMjEYjG0BztjGk1jSd54ksFgt1SmNIZo/Ho1upxhPhSAjALKEN6yAxaGHmUiqeCMhFxmDS8ng8imxwKWp4E+E6l4HEyNYgR0tGkdLwJgLctgSUN6sKyjEy0uUZiv5PROD1aucWpvDCuiF7dEbsH6dGd00Im4ebUAPUUWw9JsV6yoAsFQGyQOFK3YQf6uF17rBp+F3kqmQqRQTOnNakgNmYnz+1p3SORiZZRIOMeI1MKyJk77WLUmRaEYEymVhHtSYCZTLhKGhVBGIydFpI6yKADOOftqajYlfHV0SEshv9qyJl/ER8jHkCdYd3vlPdS/oAAAAASUVORK5CYII="
              width="30"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-u9fpxq-MuiButtonBase-root-MuiIconButton-root"
            data-testid="clear-button"
            tabindex="0"
            title="Clear"
            type="button"
          >
            <img
              alt="Clear"
              height="30"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADsAAAA2CAYAAAB5u+FtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAADKGlUWHRYTUw6Y29tLmFkb2JlLnhtcAAAAAAAPD94cGFja2V0IGJlZ2luPSLvu78iIGlkPSJXNU0wTXBDZWhpSHpyZVN6TlRjemtjOWQiPz4gPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iQWRvYmUgWE1QIENvcmUgNy4xLWMwMDAgNzkuZWRhMmIzZmFjLCAyMDIxLzExLzE3LTE3OjIzOjE5ICAgICAgICAiPiA8cmRmOlJERiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPiA8cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIiB4bWxuczp4bXA9Imh0dHA6Ly9ucy5hZG9iZS5jb20veGFwLzEuMC8iIHhtbG5zOnhtcE1NPSJodHRwOi8vbnMuYWRvYmUuY29tL3hhcC8xLjAvbW0vIiB4bWxuczpzdFJlZj0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL3NUeXBlL1Jlc291cmNlUmVmIyIgeG1wOkNyZWF0b3JUb29sPSJBZG9iZSBQaG90b3Nob3AgMjMuMSAoTWFjaW50b3NoKSIgeG1wTU06SW5zdGFuY2VJRD0ieG1wLmlpZDpFOTY3NTdGRDg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiIgeG1wTU06RG9jdW1lbnRJRD0ieG1wLmRpZDpFOTY3NTdGRTg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiI+IDx4bXBNTTpEZXJpdmVkRnJvbSBzdFJlZjppbnN0YW5jZUlEPSJ4bXAuaWlkOkU5Njc1N0ZCODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2IiBzdFJlZjpkb2N1bWVudElEPSJ4bXAuZGlkOkU5Njc1N0ZDODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2Ii8+IDwvcmRmOkRlc2NyaXB0aW9uPiA8L3JkZjpSREY+IDwveDp4bXBtZXRhPiA8P3hwYWNrZXQgZW5kPSJyIj8+95Aj+QAAAplJREFUaEPt2o+RwUAUBvDcNUAHdEAH0gEdUIIO6EA6UIISUAEd0AEduHxm90aSfcn+eS9ryDfz5kbIZn8uye6a/DzyJF+SX/X3KxIVe71ek+PxmNzvd7VFODiNY2S5XOLyeVa/33+cTif1jlyiYBeLxT/0tbbbrfqETFrHUlBdkuDWsLfb7TGbzYzAckmBW8ECOh6PjTCqsixTe/NFHOsD1YVTnjOi2BCoLk6wGBZDCYYUE8C1uMAiWE6orjRNn2dKSNixElBduCRCwKzY3W4nBtUVAmbDYmw0dU6ifMEs2Dahunzm08HYGFBdruAgbNM8t41yAXtjKehoNDJulyyA9/u96hkdLywF1RP4+XxufF+6mhYQTljcAamVS/lAscCXy0X1oBprLKDUPJf6RmOAV6uVOno1VlgK2uv1Gq+VzWZT2U+y6vrTiK2D2t4F2xqegq5Zap7rAtWRBjdBERJLQQeDgTNUBx3CF1VuM7RsoIgRS0ExhvrMSV+DtrnAaAeLD9tUsNTKhQOqwwH2uZQKWOxsapgTqhMC9oEiBaxpXJxOp+xQHUwAXKeXvlCkgDWNiTilfRu3Cb5IW3DoGVbA1h3Y9o7nExtwKBSp3KBigk03RhQHFKlgETQ8mUyMB5YCUyspznuGEatDTeTX67X6BE8oKI7PmVosQoHRQY60BUUasYgUuE0oYoVFqKWaDxjXoOvamCPWWAQdMXXQ5XfcWFDECYuEgGNCEWcsgo6Z5rV1YAqKdlxWLiHxwiLURB6g8vQSr4fDYeWzIfNcn3hjEQosXXU/qtUl6KGv/L+YHA6HJAerLe+d4CfcAD6fz0k+f1Vb3jdsD2rikbwsy9Qr2aRp+izXdE+lfmo67Kemw35qOuxnJkn+APMORUH01o2UAAAAAElFTkSuQmCC"
              width="30"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ gWCsfC"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="firstName-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r1o:"
            id=":r1o:-label"
          >
            First name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r1o:"
              name="firstName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  First name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="middleName-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r1p:"
            id=":r1p:-label"
          >
            Middle name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r1p:"
              name="middleName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Middle name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="lastName-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r1q:"
            id=":r1q:-label"
          >
            Last name
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r1q:"
              name="lastName"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Last name
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="customerId-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r1r:"
            id=":r1r:-label"
          >
            Customer id
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r1r:"
              name="customerId"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Customer id
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="mobilenumber-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r1s:"
            id=":r1s:-label"
          >
            Mobile number
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r1s:"
              name="mobileNumber"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Mobile number
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="emailaddress-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r1t:"
            id=":r1t:-label"
          >
            Email address
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r1t:"
              name="emailAddress"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  Email address
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root SearchItem css-1dbsvsh-MuiFormControl-root-MuiTextField-root"
          data-test-id="idmArnNo-input"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary css-1pysi21-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for=":r1u:"
            id=":r1u:-label"
          >
            eKYC ARN number
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input"
              id=":r1u:"
              name="idmArnNo"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1ftyaf0"
              >
                <span>
                  eKYC ARN number
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root css-vj1n65-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1el3gw5-MuiButtonBase-root-MuiIconButton-root"
          data-testid="search-button"
          tabindex="0"
          title="Search"
          type="button"
        >
          <img
            alt="Search"
            height="30"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAAjCAYAAADxG9hnAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAWJQAAFiUBSVIk8AAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIBSURBVFhH7ZahksIwEEArkUgkEolEIpFIJBKJxCErkUgkEonkE5BIJBKJDPMy2Q4Joc22V+YEb4aZuxzdvG52N5eZf8JPJCRZ5HA4mPV6bcbjsf1Mp1P7+/l8dt9oRqUIAt1u12RZ9vEzGAzM5XJxT9Tjo8j9fjfz+bzYDJnJZGKzsNvtzGq1spmRv3c6HZPnuXtaT1TkdruZXq+XtEEojGwdoiKz2cwGJeWpNbDf74sj3G63bjWdNxECSiau16tbTaPJs54IaZYjqfNWINnUHpEnQhESZDgcuhU91BcZIY4mK54Is4EAy+XSrdSDFyHOZrNxK9V4IhKAzDRBukjzQp5Iv9+3AZpOSzJBHIRSiYqcTie3Ug+GXqOMjEYjG0BztjGk1jSd54ksFgt1SmNIZo/Ho1upxhPhSAjALKEN6yAxaGHmUiqeCMhFxmDS8ng8imxwKWp4E+E6l4HEyNYgR0tGkdLwJgLctgSUN6sKyjEy0uUZiv5PROD1aucWpvDCuiF7dEbsH6dGd00Im4ebUAPUUWw9JsV6yoAsFQGyQOFK3YQf6uF17rBp+F3kqmQqRQTOnNakgNmYnz+1p3SORiZZRIOMeI1MKyJk77WLUmRaEYEymVhHtSYCZTLhKGhVBGIydFpI6yKADOOftqajYlfHV0SEshv9qyJl/ER8jHkCdYd3vlPdS/oAAAAASUVORK5CYII="
            width="30"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-u9fpxq-MuiButtonBase-root-MuiIconButton-root"
          data-testid="clear-button"
          tabindex="0"
          title="Clear"
          type="button"
        >
          <img
            alt="Clear"
            height="30"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADsAAAA2CAYAAAB5u+FtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAADKGlUWHRYTUw6Y29tLmFkb2JlLnhtcAAAAAAAPD94cGFja2V0IGJlZ2luPSLvu78iIGlkPSJXNU0wTXBDZWhpSHpyZVN6TlRjemtjOWQiPz4gPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iQWRvYmUgWE1QIENvcmUgNy4xLWMwMDAgNzkuZWRhMmIzZmFjLCAyMDIxLzExLzE3LTE3OjIzOjE5ICAgICAgICAiPiA8cmRmOlJERiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPiA8cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIiB4bWxuczp4bXA9Imh0dHA6Ly9ucy5hZG9iZS5jb20veGFwLzEuMC8iIHhtbG5zOnhtcE1NPSJodHRwOi8vbnMuYWRvYmUuY29tL3hhcC8xLjAvbW0vIiB4bWxuczpzdFJlZj0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL3NUeXBlL1Jlc291cmNlUmVmIyIgeG1wOkNyZWF0b3JUb29sPSJBZG9iZSBQaG90b3Nob3AgMjMuMSAoTWFjaW50b3NoKSIgeG1wTU06SW5zdGFuY2VJRD0ieG1wLmlpZDpFOTY3NTdGRDg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiIgeG1wTU06RG9jdW1lbnRJRD0ieG1wLmRpZDpFOTY3NTdGRTg3NDUxMUVDOTZGRUVFRUMwNTkwOTkwNiI+IDx4bXBNTTpEZXJpdmVkRnJvbSBzdFJlZjppbnN0YW5jZUlEPSJ4bXAuaWlkOkU5Njc1N0ZCODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2IiBzdFJlZjpkb2N1bWVudElEPSJ4bXAuZGlkOkU5Njc1N0ZDODc0NTExRUM5NkZFRUVFQzA1OTA5OTA2Ii8+IDwvcmRmOkRlc2NyaXB0aW9uPiA8L3JkZjpSREY+IDwveDp4bXBtZXRhPiA8P3hwYWNrZXQgZW5kPSJyIj8+95Aj+QAAAplJREFUaEPt2o+RwUAUBvDcNUAHdEAH0gEdUIIO6EA6UIISUAEd0AEduHxm90aSfcn+eS9ryDfz5kbIZn8uye6a/DzyJF+SX/X3KxIVe71ek+PxmNzvd7VFODiNY2S5XOLyeVa/33+cTif1jlyiYBeLxT/0tbbbrfqETFrHUlBdkuDWsLfb7TGbzYzAckmBW8ECOh6PjTCqsixTe/NFHOsD1YVTnjOi2BCoLk6wGBZDCYYUE8C1uMAiWE6orjRNn2dKSNixElBduCRCwKzY3W4nBtUVAmbDYmw0dU6ifMEs2Dahunzm08HYGFBdruAgbNM8t41yAXtjKehoNDJulyyA9/u96hkdLywF1RP4+XxufF+6mhYQTljcAamVS/lAscCXy0X1oBprLKDUPJf6RmOAV6uVOno1VlgK2uv1Gq+VzWZT2U+y6vrTiK2D2t4F2xqegq5Zap7rAtWRBjdBERJLQQeDgTNUBx3CF1VuM7RsoIgRS0ExhvrMSV+DtrnAaAeLD9tUsNTKhQOqwwH2uZQKWOxsapgTqhMC9oEiBaxpXJxOp+xQHUwAXKeXvlCkgDWNiTilfRu3Cb5IW3DoGVbA1h3Y9o7nExtwKBSp3KBigk03RhQHFKlgETQ8mUyMB5YCUyspznuGEatDTeTX67X6BE8oKI7PmVosQoHRQY60BUUasYgUuE0oYoVFqKWaDxjXoOvamCPWWAQdMXXQ5XfcWFDECYuEgGNCEWcsgo6Z5rV1YAqKdlxWLiHxwiLURB6g8vQSr4fDYeWzIfNcn3hjEQosXXU/qtUl6KGv/L+YHA6HJAerLe+d4CfcAD6fz0k+f1Vb3jdsD2rikbwsy9Qr2aRp+izXdE+lfmo67Kemw35qOuxnJkn+APMORUH01o2UAAAAAElFTkSuQmCC"
            width="30"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
